# sdl_cpp_tutorials

./: .gitignore  README.md  new_lesson.sh
lesson01/: install_sdl2.sh  lesson1.cpp  makefile
lesson02/: lesson2.cpp  makefile
lesson03/: lesson3.cpp  makefile
lesson04/: lesson04.cpp  makefile
lesson10/: LTexture.cpp  LTexture.hpp  lesson10.cpp  makefile
lesson11/: LTexture.cpp  LTexture.hpp  lesson11.cpp  makefile
lesson12/: CMakeCache.txt  CMakeLists.txt  LTexture.cpp  LTexture.hpp  SDL_Tutorial  cmake_install.cmake  lesson12.cpp  makefile
lesson13/: CMakeLists.txt  LTexture.cpp  LTexture.hpp  lesson13.cpp
lesson14/: CMakeLists.txt  lesson14.cpp
lesson5/: lesson5.cpp  makefile
lesson6/: install_extension_libs.sh  lesson6.cpp  makefile
lesson7/: lesson7.cpp  makefile
lesson8/: lesson8.cpp  makefile
lesson9/: lesson9.cpp  makefile
