cmake_minimum_required(VERSION 3.22)
project(SDL_Tutorial)
set(SDL2_INCLUDE_DIR /opt/homebrew/include/SDL2)
set(SDL2_LIBRARY /opt/homebrew/lib/libSDL2.dylib)
set(SDL2_IMAGE_LIBRARY /opt/homebrew/lib/libSDL2_image.dylib)
set(HEADER_FILES LTexture.hpp)
set(SOURCE_FILES lesson12.cpp LTexture.cpp)
include_directories(${SDL2_INCLUDE_DIR})
add_executable(SDL_Tutorial ${SOURCE_FILES} ${HEADER_FILES})
target_link_libraries(SDL_Tutorial ${SDL2_LIBRARY})
target_link_libraries(SDL_Tutorial ${SDL2_IMAGE_LIBRARY})